syntax = "proto3";

option csharp_namespace = "DataAccessGrpcService";

package greet;


service DataAccessGrpcService {
  // Sends a greeting
  rpc GetAppsByUserId (GetAppsByUserIdRequest) returns (GetAppsByUserIdResponce);
  rpc AddNewApp (AddNewAppRequest) returns (AddNewAppResponce);
}
// Request messages
message GetAppsByUserIdRequest { int32 applicant_id = 1; }
message AddNewAppRequest { ApplicationDto application_dto = 1; }

// Responce messages
message GetAppsByUserIdResponce { repeated Application applications = 1; }
message AddNewAppResponce { int32 result_of_insert = 1; }

message Application {
  int32 id = 1;
  string subject = 2;
  string description = 3;
  google.protobuf.Int32Value status = 4;
  google.protobuf.Int32Value application_type_id = 5;
  int32 departament_id = 6;
  int32 applicant_id = 7;
  int32 executor_id = 8;
  google.protobuf.Timestamp date_create = 9;
  google.protobuf.Timestamp date_confirm = 10;
  google.protobuf.Timestamp date_close = 11;
}

message ApplicationDto {
  string subject = 1;
  string description = 2;
  int32 status = 3;
  int32 application_type_id = 4;
  int32 departament_id = 5;
  int32 applicant_id = 6;
  google.protobuf.Timestamp date_create = 7; 
}
